<resources>
    <string name="app_name">City Notifier</string>
    <string name="appName">Название приложения</string>
    <string name="buttonAuth">Войти</string>
    <string name="buttonRegistration">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="imageViewLogoDescription">App Logo</string>
    <string name="registration">Регистрация</string>
    <string name="yourName">Ваше имя</string>
    <string name="userAgreement">Я согласен с правилами Приложения</string>
    <string name="buttonRegistrationUppercase">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="name">name</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="newPassword">Придумайте пароль</string>
    <string name="warningAccountNotFound">Аккаунт не найден. Неверный логин или пароль</string>
    <string name="warningEnterEmailAndPassword">Введите email и пароль</string>
    <string name="warningEmptyEmail">Введите email</string>
    <string name="warningEmptyPassword">Введите пароль</string>
    <string name="warningUnsuccessfulRgistration">При регистрации что-то пошло не так</string>
    <string name="buttonBackDescription">Назад</string>
    <string name="menuIconDescription">Меню</string>
    <string name="reportProblem">СООБЩИТЬ О ПРОБЛЕМЕ</string>
    <string name="haveAnIdea">ЕСТЬ ИДЕЯ!</string>
    <string name="addressOfProblem">Адрес проблемы</string>
    <string name="next">ПРОДОЛЖИТЬ</string>
    <string name="creatingMessage">Создание сообщения</string>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="problemСategory">Категория проблемы</string>
    <string name="searchCategory">Поиск категории</string>
    <string-array name="menu">
        <item>О ПРИЛОЖЕНИИ</item>
        <item>МОИ СООБЩЕНИЯ</item>
        <item>ВСЕ СООБЩЕНИЯ</item>
        <item>МОИ ИДЕИ</item>
        <item>ВСЕ ИДЕИ</item>
        <item>ПОДПИСКИ</item>
        <item>ПРОФИЛЬ</item>
        <item>ВЫХОД</item>
    </string-array>
    <string-array name="categoryMock">
        <item>Категория 1</item>
        <item>Категория 2</item>
        <item>Категория 3</item>
        <item>Категория 4</item>
        <item>Категория 5</item>
        <item>Категория 6</item>
        <item>Категория 7</item>
        <item>Категория 8</item>
        <item>Категория 9</item>
        <item>Категория 10</item>
        <item>Категория 11</item>
        <item>Категория 12</item>
        <item>Категория 13</item>
        <item>Категория 14</item>
        <item>Категория 15</item>
    </string-array>
</resources>
