<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imageViewLogoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/name"
        android:hint="@string/yourName"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration" />

    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        android:autofillHints="@string/email" />

    <EditText
        android:id="@+id/editTextPasswordReg"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailReg"
        android:autofillHints="@string/password"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPasswordRepeat"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/repeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordReg"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/checkBoxAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/userAgreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="352dp"
        android:layout_height="70dp"
        android:text="@string/buttonRegistrationUppercase"
        android:textSize="24sp"
        android:onClick="onClickRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAgreement"
        app:layout_constraintVertical_bias="0.537" />

    <ImageButton
        android:id="@+id/imageButtonBackToAuth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="159dp"
        android:onClick="onClickBackToAuth"
        android:contentDescription="@string/buttonBackDescription"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

</androidx.constraintlayout.widget.ConstraintLayout>