<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthorizationActivity">

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:padding="12dp"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/imageViewLogoDescription"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/textViewAppName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />

    <EditText
        android:id="@+id/editTextPasswordReg"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailReg" />

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="352dp"
        android:layout_height="70dp"
        android:padding="12dp"
        android:text="@string/buttonAuth"
        android:textSize="24sp"
        android:onClick="onClickGoToAuthorization"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordReg"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="12dp"
        android:text="@string/buttonRegistration"
        android:textSize="24sp"
        android:onClick="onClickGoToRegistration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>